# CMake-Best-Practice

./: README.md
0.Hello_World/: CMakeLists.txt  README.md  hello_cmake.cpp
1.Libraries/shared/: CMakeLists.txt  README.MD
1.Libraries/shared/include/: hello_cmake.h
1.Libraries/shared/src/: hello_cmake.cpp
1.Libraries/static/: CMakeLists.txt  README.MD
1.Libraries/static/src/: main.cpp
2.introduce-thrid-party-libraries/: CMakeLists.txt  README.md  main.cpp
3.common_flags/: CMakeLists.txt  README.md  main.cpp
4.provide-my-lib/: CMakeLists.txt  HELLO_CMAKEConfig.cmake  README.MD
5.introduce-my-lib/: CMakeLists.txt  FindHELLO_CMAKE.cmake  main.cpp
6.cmake-with-gtest/import-gtest-from-github/: README.md
6.cmake-with-gtest/import-system-installed-gtest/: CMakeLists.txt  tests.cpp
